--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
@@ -1,6 +1,7 @@
 [Window][Debug##Default]
-Pos=68,4
-Size=400,400
+ViewportPos=227,222
+ViewportId=0x9F5F46A1
+Size=487,597
 Collapsed=0
 
 [Window][Test]
@@ -9,20 +10,33 @@ Size=306,385
 Collapsed=0
 
 [Window][Another Window]
-Pos=1859,563
-Size=566,280
+ViewportPos=2133,443
+ViewportId=0xA4D966FE
+Size=156,312
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Hello, world!]
-ViewportPos=1988,219
-ViewportId=0xA4D966FE
-Size=311,303
+Pos=1993,259
+Size=216,207
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][test]
+Pos=2211,259
+Size=213,207
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][test2]
+Pos=1993,468
+Size=300,300
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1988,219 Size=311,303 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=566,282 Selected=0xD00C9CD4
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=566,280 Selected=0xD279B26D
+DockNode      ID=0x00000001 Pos=4553,282 Size=431,414 Split=Y
+  DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=431,207 Split=X
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=216,414 Selected=0xD00C9CD4
+    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=213,414 Selected=0xBDD0C265
+  DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=431,205 Selected=0xED1D9E6B
 
