--- a/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
@@ -10,7 +10,7 @@
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\ColliderBase.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\MonoBehaviourBase.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\BehaviourBase.cpp" />
-    <ClCompile Include="src\DUOLGameEngine\ECS\Component\ObjectBase.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\ObjectBase.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\GameObject.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\ComponentBase.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Transform.cpp" />
@@ -43,6 +43,10 @@
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Camera.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\MeshFilter.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\TPFController.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\BoxCollider.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Object\PhysicsMaterial.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Object\Mesh.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Object\Material.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGameEngine\Manager\GraphicsManager.h" />
@@ -57,7 +61,7 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\GameObject.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\ComponentBase.h" />
     <ClInclude Include="include\DUOLGameEngine\API\ISerializable.h" />
-    <ClInclude Include="include\DUOLGameEngine\ECS\Component\ObjectBase.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\ObjectBase.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\MonoBehaviourBase.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\Defines.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Transform.h" />
@@ -97,5 +101,9 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\MeshFilter.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\SingletonBase_Unique.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\TPFController.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\BoxCollider.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Object\PhysicsMaterial.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Object\Mesh.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Object\Material.h" />
   </ItemGroup>
 </Project>
