--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
@@ -1,6 +1,5 @@
 [Window][Debug##Default]
-ViewportPos=227,222
-ViewportId=0x9F5F46A1
+Pos=282,247
 Size=487,597
 Collapsed=0
 
@@ -16,27 +15,38 @@ Size=156,312
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=1993,259
-Size=216,207
+ViewportPos=1157,117
+ViewportId=0xEBE6C6E6
+Size=438,845
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][test]
-Pos=2211,259
-Size=213,207
+ViewportPos=1084,12
+ViewportId=0xD87F7E0C
+Size=213,484
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][test2]
-Pos=1993,468
+Pos=1774,145
 Size=300,300
 Collapsed=0
-DockId=0x00000005,0
+
+[Window][TextureBox]
+Pos=2025,831
+Size=300,300
+Collapsed=0
+
+[Window][TextTest]
+ViewportPos=1603,408
+ViewportId=0xDFEA869A
+Size=651,409
+Collapsed=0
+
+[Window][ParticleSystem]
+ViewportPos=1820,238
+ViewportId=0xCAAA7EE8
+Size=948,518
+Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=4553,282 Size=431,414 Split=Y
-  DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=431,207 Split=X
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=216,414 Selected=0xD00C9CD4
-    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=213,414 Selected=0xBDD0C265
-  DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=431,205 Selected=0xED1D9E6B
 
