--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/EffectToolDemo.vcxproj.filters
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/EffectToolDemo.vcxproj.filters
@@ -33,6 +33,15 @@
     <ClCompile Include="Inspector.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="FileDialogs.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="ResourceManager.cpp">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureLoader.cpp">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -48,6 +57,18 @@
       <Filter>소스 파일</Filter>
     </ClInclude>
     <ClInclude Include="Inspector.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="FileDialogs.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ResourceManager.h">
+      <Filter>리소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureLoader.h">
+      <Filter>리소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="StringHelper.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
