--- a/DUOLGameEngine/DUOLGameEngine.vcxproj
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj
@@ -239,8 +239,10 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\PhysicsMaterial.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Material.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Mesh.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\Rigidbody.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\Rigidbody.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Material.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Mesh.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\PhysicsMaterial.cpp" />
