--- a/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
+++ b/DUOLGameEngine/DUOLGameEngine.vcxproj.filters
@@ -47,6 +47,7 @@
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\PhysicsMaterial.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Mesh.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Material.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\Rigidbody.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGameEngine\Manager\GraphicsManager.h" />
@@ -105,5 +106,6 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\PhysicsMaterial.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Mesh.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Material.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\Rigidbody.h" />
   </ItemGroup>
 </Project>
