Particle System 기능 추가 중.
MaxParticles 수정하는 중...
ContantBuffer를 통해 VertexCount를 체크하는 방법을 생각해보자~

--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
@@ -1,52 +1,31 @@
 [Window][Debug##Default]
-Pos=282,247
-Size=487,597
+Pos=60,60
+Size=400,400
 Collapsed=0
 
-[Window][Test]
-Pos=59,107
-Size=306,385
-Collapsed=0
-
-[Window][Another Window]
-ViewportPos=2133,443
+[Window][Play_Stop]
+ViewportPos=1990,712
 ViewportId=0xA4D966FE
-Size=156,312
+Pos=204,0
+Size=96,300
 Collapsed=0
-
-[Window][Hello, world!]
-ViewportPos=1157,117
-ViewportId=0xEBE6C6E6
-Size=438,845
-Collapsed=0
-
-[Window][test]
-ViewportPos=1084,12
-ViewportId=0xD87F7E0C
-Size=213,484
-Collapsed=0
-
-[Window][test2]
-Pos=1774,145
-Size=300,300
-Collapsed=0
+DockId=0x00000003,0
 
 [Window][TextureBox]
-Pos=2025,831
+ViewportPos=1990,712
+ViewportId=0xA4D966FE
 Size=300,300
 Collapsed=0
-
-[Window][TextTest]
-ViewportPos=1603,408
-ViewportId=0xDFEA869A
-Size=651,409
-Collapsed=0
+DockId=0x00000002,0
 
 [Window][ParticleSystem]
-ViewportPos=1820,238
+ViewportPos=1460,68
 ViewportId=0xCAAA7EE8
-Size=948,518
+Size=954,442
 Collapsed=0
 
 [Docking][Data]
+DockNode    ID=0x00000001 Pos=1990,712 Size=300,300 Split=X
+  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=202,300 Selected=0x8D5523B2
+  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=96,300 Selected=0x7637BC6E
 
