파티클 시스템 기능 추가 중.
maxParticle, Emission, Lifetime(Velocity, Color), Rotation 등 추가.

--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
@@ -1,31 +1,27 @@
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=2148,317
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
 [Window][Play_Stop]
-ViewportPos=1990,712
-ViewportId=0xA4D966FE
-Pos=204,0
-Size=96,300
-Collapsed=0
-DockId=0x00000003,0
-
-[Window][TextureBox]
-ViewportPos=1990,712
-ViewportId=0xA4D966FE
-Size=300,300
+Pos=47,41
+Size=224,404
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][TextureBox]
+Pos=47,41
+Size=300,300
+Collapsed=0
+DockId=0x00000002,1
+
 [Window][ParticleSystem]
-ViewportPos=1460,68
+ViewportPos=1841,64
 ViewportId=0xCAAA7EE8
-Size=954,442
+Size=706,733
 Collapsed=0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1990,712 Size=300,300 Split=X
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=202,300 Selected=0x8D5523B2
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=96,300 Selected=0x7637BC6E
+DockNode  ID=0x00000002 Pos=55,72 Size=224,404 Selected=0x8D5523B2
 
